src/Layout.css
* {
  margin: 0;
  padding: 0;
}
p {
  text-indent: 50px;
  margin-bottom: 15px;
}
html {
  scroll-padding-top: 150px;
}
@media only screen and (max-width: 800px) {
  html {
    scroll-padding-top: 70px;
  }
}
.textpanel {
  margin-bottom: 10px;
  padding-bottom: 10px;
}
.textpanel input {
  padding: 8px;
}
/* @import "react-alice-carousel/lib/alice-carousel.css"; */

/* NOT FOUND */ /* NOT FOUND */ /* NOT FOUND */ /* NOT FOUND */
.not-found {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 70vh;
}
.not-found h1 {
  margin-bottom: 3rem;
}
.not-found p {
  margin-bottom: 1.5rem;
  margin-left: 20px;
  margin-right: 20px;
  text-indent: initial;
}
.not-found a {
  padding: 0.7rem 1.4rem;
  transition: transform 0.2s, box-shadow 0.2s;
  margin-left: 20px;
  margin-right: 20px;
}
.not-found a:hover {
  transform: scale(1.05);
}
/* NOT FOUND */ /* NOT FOUND */ /* NOT FOUND */ /* NOT FOUND */
/* UNDER CONSTRUCTION */ /* UNDER CONSTRUCTION */ /* UNDER CONSTRUCTION */
.underconstruction {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 70vh;
}
.underconstruction h1 {
  margin-bottom: 3rem;
}
.underconstruction p {
  margin-bottom: 1.5rem;
  margin-left: 20px;
  margin-right: 20px;
  text-indent: initial;
}
.underconstruction a {
  padding: 0.7rem 1.4rem;
  transition: transform 0.2s, box-shadow 0.2s;
  margin-left: 20px;
  margin-right: 20px;
}
.underconstruction a:hover {
  transform: scale(1.05);
}
/* UNDER CONSTRUCTION */ /* UNDER CONSTRUCTION */ /* UNDER CONSTRUCTION */

/* COMMON LAYOUT */ /* COMMON LAYOUT */ /* COMMON LAYOUT */
.generalbody {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 30px 0 30px 0;
  gap: 15px;
}
.generalbigtitle,
.generaltitle {
  max-width: 1000px;
}
.generalbigtitle,
.generaltitle,
.generalcontent {
  margin: 0 20px 0 20px;
  text-align: center;
}
.generalcontent {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 25px;
}
.generalcontent ul {
  display: flex;
  flex-direction: column;
  gap: 12px;
  list-style: none;
}
.generalcontent li {
  text-align: center;
  margin: 0 20px 0 20px;
}
.listseparator {
  height: 2.5rem;
  align-content: center;
  margin-top: 20px;
  margin-bottom: 10px;
  padding-top: 5px;
  min-width: 500px;
}
.listseparator.first {
  margin-top: 0px;
}
/* COMMON LAYOUT */ /* COMMON LAYOUT */ /* COMMON LAYOUT */

/* NAVBAR */ /* NAVBAR */ /* NAVBAR */ /* NAVBAR */ /* NAVBAR */
.navbar {
  display: flex;
  align-items: center;
  justify-content: center;
  position: sticky;
  width: 100%;
  height: 65px;
  top: 0;
  z-index: 2;
}
.brand-logo {
  width: 165px;
  height: 34.5px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
.navbar-wrapper,
.navbar-menu,
.navbar-menu-extended {
  display: flex;
  align-items: center;
  height: 100%;
  transition: all 0.1s ease;
}
.navbar-func {
  align-items: center;
}
.theme-wrapper {
  display: flex;
  gap: 30px;
}
[data-theme="light"] .theme-btn1 {
  display: none;
}
[data-theme="star"] .theme-btn2 {
  display: none;
}
[data-theme="dark"] .theme-btn3 {
  display: none;
}
.theme-btn1,
.theme-btn2,
.theme-btn3 {
  display: inline-block;
  width: 38px;
  height: 38px;
  background: none;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
.language-switcher button {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0;
}
.language-switcher .inact {
  display: none;
}

.navbar-extended {
  display: none;
  /* display: flex; */
  flex-direction: column;
  align-items: start;
  justify-content: center;
  position: absolute;
  top: 100%;
  margin-left: -20px;
  padding: 20px;
  padding-right: 35px;
  gap: 20px;
  z-index: 1;
}
.navbar-menu-extended:hover .navbar-extended {
  display: flex;
}
.navbar-extended-item {
  display: flex;
  align-items: center;
  justify-content: center;
}

@media only screen and (max-width: 800px) {
  .theme-wrapper-mid {
    display: none;
  }
  .navbar-extended,
  .navbar-extended-item {
    display: none;
  }
  .navbar-menu,
  .navbar-menu-extended {
    height: initial;
  }

  .navbar-wrapper {
    align-items: center;
    width: 100%;
    padding: 0 35px;
  }
  .navbar-menu {
    position: fixed;
    flex-direction: column;
    align-items: end;
    width: 100%;
    top: 64px;
    right: 0;
    padding-top: 0px;
    padding-bottom: 15px;
    padding-right: 30px;
    transition: transform 0.1s ease-in-out;
    transform: translateX(100%);
  }
  .navbar-menu.open {
    transform: translateX(0);
  }
  .navbar-menu-text {
    margin: 10px 0;
  }
  .navbar-menu-toggle {
    display: flex;
    margin-left: auto;
    padding: 5px;
    background-color: initial;
    border: initial;
  }
  .navbar-menu-toggle:hover {
    transform: scale(1.1);
    padding: 5px;
    background-color: color-mix(
      in srgb,
      var(--button-background-active) 20%,
      transparent
    );
  }
  .navbar-menu-toggle span {
    display: block;
    width: 100%;
    height: 3px;
  }
  .navbar-func {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: right;
    position: fixed;
    width: 100%;
    top: calc(127px + 65px);
    right: 0;
    padding-top: 5px;
    padding-bottom: 20px;
    padding-right: 30px;
    gap: 35px;
    transition: transform 0.1s ease-in-out;
    transform: translateX(100%);
  }
  .navbar-func.open {
    transform: translateX(0);
  }
  .lang-btn {
    margin: 15px 0;
  }
}
/* ... */

